# mp2torch

./: .gitignore  README.md  pyproject.toml
scripts/: benchmark_facedetection.py  benchmark_facelandmarker.py  benchmark_image.py  convert.sh
src/mp2torch/: __init__.py
src/mp2torch/benchmarks/: __init__.py  blazeface.py  facemesh.py
src/mp2torch/calculators/: clip_vector_size.py  detection_to_landmarks.py  detections_to_rects.py  face_detection_front_detection_to_roi.py  gate.py  image_to_tensor.py  non_max_suppression.py  rect_transformation.py  ssd_anchors_calculator.py  tensors_to_detections.py  tensors_to_floats.py  tensors_to_landmarks.py  thresholding.py
src/mp2torch/models/: __init__.py  blazeface.py  facemesh.py  wrapper.py
src/mp2torch/types/: __init__.py  tensor.py
src/mp2torch/utils/: __init__.py  data.py  draw.py  scores.py
